Faceboock like button and contact for Adstylus is added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="tonyfavicon.png">
     <title>Stylustonypro</title>
-    <link rel="stylesheet" href="styfont/demo.css">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
@@ -17,7 +16,7 @@
             <div class="cell small-4">
                 <img src="imgs/avatar.png" alt="Avatar Tony">
             </div>
-            <div class="cell small-6">
+            <div class="cell small-7">
                 <div class="Heading">
                     <h1>
 
@@ -26,25 +25,27 @@
 
                             @stylustonypro<br>
                     </span>
-                    <div class="flex-container align-justify Margin-bottom-6">
-                        <a href="https://github.com/stylustonypro" target="_blank">
-                            <span class="stycon-github"></span></a>
-                        <a href="https://www.instagram.com/stylustonypro/">
-                            <span class="stycon-instagram"></span></a>
-                        <a href="https://www.facebook.com/stylustonypro/">
-                            <span class="stycon-facebook2"></span></a>
-                        <a href="https://www.youtube.com/stylustonypro/">
-                            <span class="stycon-youtube"></span></a>
-                        <a href="https://www.linkedin.com/in/stylustonypro/"><span class="stycon-linkedin"></span></a>
-                    </div>
                     <div class="flex-container align-justify">
                         <img class="Retina-small-icon" src="imgs/ui-icon.png" alt="UI">
                         <img class="Retina-small-icon" src="imgs/frontend-icon.png" alt="Front-end">
                         <img class="Retina-small-icon" src="imgs/mkt-icon.png" alt="MKT">
                     </div>
                 </div>
+                <div class="flex-container align-justify Social-icons-block">
+                    <a href="https://github.com/stylustonypro" target="_blank">
+                        <span class="stycon-github"></span></a>
+                    <a href="https://www.instagram.com/stylustonypro/">
+                        <span class="stycon-instagram"></span></a>
+                    <a href="https://www.facebook.com/stylustonypro/">
+                        <span class="stycon-facebook2"></span></a>
+                    <a href="https://www.youtube.com/stylustonypro/">
+                        <span class="stycon-youtube"></span></a>
+                    <a href="https://www.linkedin.com/in/stylustonypro/"><span class="stycon-linkedin"></span></a>
+                </div>
             </div>
+
         </div>
+
       <!-- Header cover ends-->
       <!-- Stylus Quote  -->
       <div class="grid-x grid-padding-x align-center Margin-top Margin-bottom">
@@ -53,13 +54,16 @@
                     a Graphic Designer</h2>
                 <p>
                     Is who print style in front veryone eyes.<br>
-                    <span class="float-right Underline"><i> I am designed for </i> <span class="stycon-quill"> </span></span>
-
+                    <span class="float-right Underline"><i> I am designed for </i>
+                        <span class="stycon-quill"> </span>
+                    </span>
                 </p><br>
-                <div class="float-right">
+                <div class="float-right align-right text-right">
                     <button class="button hollow alert small" data-open="exampleModal1">
                         <span class="stycon-bubbles2"> </span>
-                         Greetings to style</button>
+
+                         Greetings to style</button><br>
+                    <div class="fb-like" data-href="https://facebook.com/stylustonypro/" data-width="" data-layout="button" data-action="like" data-size="large" data-share="false"></div>
                 </div>
                 <div class="reveal" id="exampleModal1" data-reveal>
                     <h4> <span class="stycon-envelop"> </span> stylustonypro@gmail.com</h4>
@@ -95,6 +99,7 @@
                     </button>
                 </div>
           </div>
+
       </div>
       <!-- Quote Ends -->
       <!-- Stylus Stories -->
@@ -135,7 +140,8 @@
           </div>
       </div>
       <!-- footer Ends -->
-
+      <div id="fb-root"></div>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v5.0&appId=185610429310620&autoLogAppEvents=1"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
