--- a/product-design.html
+++ b/product-design.html
@@ -330,21 +330,25 @@
       <!-- footer -->
     <div class="grid-x grid-padding-x align-center Margin-top">
         <div class="cell text-center">
-             <img src="imgs\divider.png" alt="" class="divider-white">
-             <p class="Design-quote">
+            <img src="imgs\divider.png" alt="" class="divider-white">
+            <div class="Design-quote">
+                <p>
 
                  Bringing a <b>product</b> to life involves being part of <b>people's lifestyle</b><br>
-             _<span class="stycon-quill"></span></p>
-
-
-             <img src="imgs\divider.png" alt="" class="divider-white">
+                _<span class="stycon-quill"></span>
+                </p>
+                <!-- Like button -->
+                <div class="fb-like" data-href="https://facebook.com/stylustonypro/" data-width="200" data-layout="button" data-action="like" data-size="large" data-share="false"></div>
+            </div>
+            <img src="imgs\divider.png" alt="" class="divider-white">
         </div>
+
         <div class="cell small-10 text-center">
             <a class="linkedin" href="http://cl.linkedin.com/in/stylustonypro" target="_blank">
                 <i class="fi-social-linkedin"></i>
 
                 Antonio Silva</a>
-            </div>
+        </div>
         <div class="cell small-10 text-center">
             <a class="facebook" href="https://www.facebook.com/stylustonypro" target="_blank"><i class="fi-social-facebook"></i>
 
@@ -361,7 +365,7 @@
                 stylustonypro</a>
         </div>
         <div class="cell small-10 text-center">
-            <a class="youtube" href="https://www.youtube.com/c/Dibujalo" target="_blank"><i class="fi-social-youtube"></i>
+            <a class="youtube" href="https://www.youtube.com/stylustonypro" target="_blank"><i class="fi-social-youtube"></i>
 
                 stylustonypro</a>
         </div>
@@ -381,7 +385,8 @@
         </div>
     </div>
       <!-- footer Ends -->
-
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v5.0&appId=185610429310620&autoLogAppEvents=1"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
