--- a/adstylus.html
+++ b/adstylus.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Product designer story</title>
+        <title>Adstylus</title>
         <link rel="icon" type="image/png" href="tonyfavicon.png">
         <link rel="stylesheet" href="css/foundation.css">
         <link rel="stylesheet" href="css/app.css">
