Firts post in ES directory

--- a/product-design.html
+++ b/product-design.html
@@ -24,7 +24,7 @@
             </div>
             <div class="cell">
                 <div class="Heading">
-                    <h1>
+                    <h1 class="Title-stylustory">
 
                         PRODUCT DESIGNER</h1>
                     <p class="Negative-margin-top Small-line-height">
@@ -69,7 +69,7 @@
                   </div>
               </div>
             </div>
-      </div>
+        </div>
       <!-- Header cover ends-->
       <!-- Restyling -->
         <div class="grid-x grid-padding-x Margin-top-extra">
@@ -114,7 +114,7 @@
         </div>
       <!-- restyling ends -->
       <!-- code -->
-      <div class="grid-x grid-padding-x Margin-top-extra">
+        <div class="grid-x grid-padding-x Margin-top-extra">
           <div class="heading cell">
             <div class="grid-x align-middle align-justify">
                 <h2 class="Second-heading cell small-10">
@@ -146,7 +146,7 @@
                     auto medium-1 text-right -->
                     <div class="cell auto medium-1 text-right">
 
-                        <img class="Retina-small-icon" src="imgs\mkt-icon.png" alt="Icon MKT">
+                        <img class="Retina-small-icon"     src="imgs\mkt-icon.png" alt="Icon MKT">
                     </div>
                 </div>
             </div>
@@ -162,8 +162,7 @@
             </p>
             <a href="adstylus.html" class="cell small-9 button expanded small hollow">
                 <span class="stycon-diamonds"> </span>
-
-                You already new this. Right?
+                You already knew this. Right?
             </a>
 
             <div class="cell Margin-bottom text-center Margin-top">
